<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:background="@drawable/appbar_header"
        android:layout_height="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/select_language_to_learn"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>

    <ListView
        android:layout_marginTop="15dp"
        android:layout_below="@+id/topbar"
        android:id="@+id/language_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</RelativeLayout>