<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.DictionaryActivity">

    <TextView
        android:id="@+id/txt_noRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/ubuntu_light"
        android:text="@string/no_record"
        android:visibility="gone" />
    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/appbar_header">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/hamburger_image1"
            android:onClick="btn_menu"
            android:src="@drawable/ic_menu" />
        <TextView
            android:id="@+id/txtScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/words1"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#8F8E8E" />

        <LinearLayout
            android:background="#EFEEEE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:padding="5dp"
                android:paddingBottom="5dp"
                android:text="@string/words"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <View

                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#8F8E8E" />

            <TextView
                android:id="@+id/txt_meaning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:padding="5dp"
                android:paddingBottom="5dp"
                android:text="@string/meanings"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#8F8E8E" />
        <ListView
            android:id="@+id/words_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topbar"
              />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/purple_700"
        app:elevation="5dp"
        app:fabSize="normal"
        tools:ignore="ContentDescription,UnusedAttribute" />
</RelativeLayout>