<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_row"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu"
            android:gravity="center"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/word"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View

            android:layout_width="0.5dp"
            android:background="#8F8E8E"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/txt_meaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ubuntu"
            android:gravity="center"
            android:padding="5dp"
            android:paddingBottom="5dp"
            android:text="@string/meaning"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>
    <View

        android:layout_width="match_parent"
        android:background="#8F8E8E"
        android:layout_height="0.5dp"/>



</LinearLayout>